Fusion CommonJS
