# src/routes/coffeeRoutes.js
@@ -1,12 +1,8 @@
-import express from 'express';
-import { createOrder, getOrders, rechargeCredit } from '../controllers/coffeeController.js';
-import { login, register } from '../controllers/authController.js';
-import auth from '../middlewares/auth.js';
+const express = require('express');
+const { createOrder, getOrders, rechargeCredit } = require('../controllers/coffeeController.js');
+const auth = require('../middlewares/auth.js');
 
 const router = express.Router();
-
-router.post('/register', register);
-router.post('/login', login);
 
 router.use(auth);
 
@@ -14,4 +10,4 @@ router.post('/orders', createOrder);
 router.get('/orders', getOrders);
 router.post('/credit/recharge', rechargeCredit);
 
-export default router;
+module.exports = router;
